--- a/booki2.css
+++ b/booki2.css
@@ -1,91 +1,79 @@
 /*police*/
+
 @font-face
 {
-    font-family: 'Raleway';
-    /*src:('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700;800&display=swap')/*/
-    src: url('./police/Raleway-Bold.ttf'),
-         url('./police/Raleway-Medium.ttf'),
-         url('./police/Raleway-SemiBold.ttf'),
-         url('./police/Raleway-Regular.ttf');
-    font-weight: normal;
-    font-style: normal;
-    /*src:url('normalize.css');*/
-    }
-/* wireframe à 2900px . */
-/* elements generaux et polices */
+    font-family:'Raleway';
+    src:url('././police/Raleway/Raleway-Bold.ttf'),
+        url('././police/Raleway/Raleway-Medium.ttf'),
+        url('././police/Raleway/Raleway-Regular.ttf'),
+        url('././police/Raleway/Raleway-SemiBold.ttf');
+        font-weight: normal;
+        font-style: normal;
+}
+
+/*elements generaux et polices*/
 body
 {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
     width: 100%;
-    font-family: 'Raleway',Verdana,sans-serif;
-    font-size: 20px;
-    line-height: 1.3;
+    font-family: 'Raleway'Verdana, sans-serif;
+    font-size:20px;
+    line-height: 0.9;
     box-sizing: border-box;
     }
-#conteneur /*marge de 100px sauf sur footer*/
+#conteneur
 {
     width: 93%;
-    margin:auto;
-    
+    margin:0px auto;
     }
+
 i
-{
-    color:#0065FC;
+{ 
+    color:#0065FC ;
     }
 a
 {
     display: block;
-    color:inherit;
-    text-decoration: none;
+    color: inherit;
+    text-decoration:none;
     }
 #deux_sections a:hover,#section_activites a:hover
 {
     color:#0065FC;
-    
-}
+    }
 h2
-{   
-    margin-right: 10px;
-    margin-bottom: 60px;
+{
+    
+    margin:10px 10px 60px;
     font-size: 50px;
     font-weight: bold;
     }
 h3
 {
     font-size: 33px;
-   font-family: 'Raleway-SemiBold',serif;
+    font-family: 'Raleway-SemiBold'serif;
     font-weight: bold;
-    margin: 20px 0px 0px;
-    
+    margin:20px 0px 0px;
     }
- p
+p
 {
-    font-family: 'Raleway-Regular';
-    font-size: 30px;
-    margin: 0px;
-}
-span
-{
-    font-family: 'Raleway-SemiBold',serif;
+    font-family: 'Raleway-SemiBold',serif ;
     font-weight: bold;
-}
-    
+    }
+span
+{  
+    font-family:'Raleway-SemiBold',serif;
+    font-weight: bold;
+    }                                                       
 
-/* header*/
 header
-{ 
+{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 60px;
-    padding-left: 70px;
+    padding-left: 70px;  
     }
-header img
-{
-    width: 75%;
-    }
-
 ul
 {
     list-style: none;
@@ -94,7 +82,6 @@ ul
     width: 20%;
     
      }
-
 header a
 {
     text-decoration: none;
@@ -108,16 +95,14 @@ ul a:visited,ul a:hover
     color:rgb(0,101,255,1);
     text-decoration: none; 
     }
-/* section1*/
-/*1er champ*/
 
 form
 {
     display:flex;
     justify-content: flex-start;
     align-items: center;
-    font-weight: bold;
-     }
+    font-weight: bold;  
+    }
 form i
 {
     color: black;
@@ -127,64 +112,53 @@ form i
     border:none;
     border-bottom-left-radius: 20px 20px;
     border-top-left-radius: 20px 20px;
-    padding: 25px;
+    padding: 25px; 
     }
 fieldset
 {
-    border:none;
+    border: none;
     }
-#alignement_filtres>p
-{
-    margin-bottom: 80px;
-    }
-
 .form .entree
 {
     width: 426px;
     height: 95px;
-    
-       }
-
+    }
 #nom_de_ville
 {
     font-size: 40px;
     font-weight: bold;
     padding-left:20px;
-    border:3px solid #F2F2F2;
-    
+    border:3px solid #F2F2F2;  
     }
 #nom_de_ville:visited,#nom_de_ville:active
 {
     border:none;
-    text-decoration: none;
-
-}
- button 
+    text-decoration: none; 
+    }
+button
 {
     background-color: #0065FC;
     color: white;
     border-top-right-radius: 20px 20px;
     border-bottom-right-radius: 20px 20px;
-    
     height: 100px;
     width:270px;
     font-size: 30px; 
     font-weight: bold;
     color: white;
-    position:relative;
+    position:relative; 
     }
 button i
 {
- 
-  background-color: #0065FC;
-  color: white;
-  border-radius: 20%; 
-  font-size: 2em;
-  padding:22px;
-  position:absolute;
-  top:-6px;
-  left:-10px;
-  visibility: hidden;
+    background-color: #0065FC;
+    color: white;
+    border-radius: 20%; 
+    font-size: 2em;
+    padding:22px;
+    position:absolute;
+    top:-6px;
+    left:-10px;
+    visibility: hidden; 
     }
 #section_fieldset h2
 {
@@ -193,25 +167,20 @@ button i
     }
 #section_fieldset>p
 {
-    margin-top: 0px;
-    margin-left: 5px;
+    margin:20px 5px;
     }
 
-
-
-/* section2 les filtres*/
 #alignement_filtres
 {
     display: flex;
     align-items: baseline;
     }
-
 #filtres
 {
     display: flex;
     justify-content: flex-start;
     flex-flow: wrap;
-    align-items: center;
+    align-items: center; 
     }
 #filtres p
 {
@@ -231,7 +200,7 @@ button i
 {
     background-color: #0065FC;
     opacity: 0.5;
-}
+    }
 #filtres i
 {
     background-color:#c8e3fdfa;
@@ -239,12 +208,12 @@ button i
     border-radius: 50%;
     position: absolute;
     left: -28px;
-    padding: 25px;
+    padding: 21px;
     }
 #filtres h2
 {
     width:3%;
-    margin-right: 80px;
+    margin-right: 80px;   
     }
 .section_filtres span
 {
@@ -253,7 +222,7 @@ button i
     border:1px solid #777272;
     border-radius:40px 40px;
     }
-/* alignement  sections hebergement et aside*/
+
 #deux_sections
 {
     display: flex;
@@ -261,19 +230,15 @@ button i
     justify-content: space-between;
     box-sizing: border-box;
     }
-
-/* selecteurs communs section hebergement et aside*/
 .etoiles_satisfaction
 {
-    display: flex;    
+    display: flex;
     }
 .etoiles_satisfaction li
 {
-    list-style: none;
-    margin-left: 10px;
+   list-style: none;
+   margin-left: 10px; 
     }
-
-/* les plus populaires aside */
 .populaires_vignettes
 {
     display: flex;
@@ -281,9 +246,9 @@ button i
     border-radius: 50px ;
     width: 85%; /*670px*/
     height: 275px;
-    margin:  0px 75px 75px;
+    margin:  0px 60px 60px;
     box-shadow: 3px 3px 14px 5px #77727254;
-    box-sizing: border-box;
+    box-sizing: border-box; 
     }
 .populaires_description
 {
@@ -292,8 +257,7 @@ button i
     justify-content: space-between;
     margin-left: 23px;
     }
-
-.populaires_images 
+.populaires_images
 {
     width:280px;/*41%*/
     position: relative;
@@ -306,21 +270,21 @@ button i
     width: 159%;
     position:absolute;
     left:-24%;
-}
+    }
 #populaires_images2
 {
     width:150%;
     position: absolute;
     top:-23%;
     left:-23%;
-}
+    }
 #populaires_images3
 {
     width: 115%;
     position:absolute;
     top: -37%;
     left:auto;
-}
+    }
 #entete_populaire
 {
     display:flex;
@@ -330,31 +294,27 @@ button i
     margin-top: 100px;
     padding-left: 80px;
     padding-bottom: 40px;
-     }
+    }
 #entete_populaire i
 {
     color: black;
     font-size: 40px;
     }
 
-/* alignement entete avec images/description*/
 aside
 {
     display:flex;
     flex-flow: wrap;
     justify-content: space-between;
-    width: 33%;
-    max-width: 800px;
-    min-width: 768px;
+    width: 30%;
+    
     background-color: #F2F2F2;
     border-radius: 50px 50px;
     }
 
 
-/*hebergements à Marseille */
-/*gestion taille images des vignettes*/
 #section_hebergement figure
- {
+{
     width: 100%;
     height: 230px;
     position: relative;
@@ -365,16 +325,14 @@ aside
     }
 #section_hebergement figure img
 {
-    
     position: absolute;
-    object-fit: cover;
-
-}
+    object-fit: cover;/*-----------------------------*/
+    }
 #hebergement_vignette_images1
 {
     width:130%;
     top:-20%;
-}
+    }
 #hebergement_vignette_images2
 {
     width: 125%;
@@ -384,13 +342,13 @@ aside
 {
     width: 130%;
     top:-60%;
-}
+    }
 #hebergement_vignette_images4
 {
     width: 120%;
     top: -98%;
     left:-13%;
-}
+    }
 #hebergement_vignette_images5
 {
     width: 130%;
@@ -400,8 +358,7 @@ aside
 {
     width: 100%;
     top: -115%;
-}
-
+    }
 /*alignement des vignettes*/
 #hebergement article
 {
@@ -415,8 +372,8 @@ aside
     margin: 30px 0px;
     box-sizing: border-box;
     }
-/* finitions*/
 
+/*finitions*/
 .hebergement_description
 {
     display: flex;
@@ -440,14 +397,11 @@ aside
     background-color: #F2F2F2;
     box-sizing: border-box;
     border-radius: 50px 50px;
-    padding:100px 80px 80px;
+    padding:100px 60px 60px;
    }
-   
-   /* section activités */
 
-/* elements generaux:alignement et mise en forme display*/
-/*
-#alignement_activites
+   /*section activites*/
+/*#alignement_activites
 {
     display: inline-block;
 }*/
@@ -457,14 +411,13 @@ aside
     margin-bottom:130px;
     flex-flow: wrap;
     justify-content: space-between;
-}
+    }
 
 .activites1,#activites2,#activites4
 {
     margin: 0px;
     box-sizing: border-box;
-    
-   }
+        }
 /* mise en forme des vignettes*/
 .activites_description
 { 
@@ -488,24 +441,28 @@ aside
 .activites1 figure
 {
     height:780px;
-}
-#activites2>article>a>figure:nth-child(1)
+    }
+#activites2 article:nth-child(1) figure
 {
-    height:220px ;
-    
-}/*
+    height:360px ;
+    }
+#activites2 article:nth-child(2) figure
+{
+    height: 220px;
+    }
 #activites2 figure:nth-child(2)
 {
     height: 220px;
-}*/
-#activites4 figure:nth-child(1)
+    }
+#activites4 article:nth-child(1) figure
 {
-    height:290px ;
-}/*
-#activites4 figure:nth-child(2)
+    height:280px ;
+    }
+#activites4 article:nth-child(2) figure
 {
-    height: 310px;
-}
+    height:310px;
+    }
+
 /*mise en taille des images*/
 #section_activites img
 { 
@@ -515,131 +472,114 @@ aside
     }
 #activites2 article:nth-child(1)
 {
-     margin-bottom: 71px;
+     margin-bottom: 66px;
     }
 #activites4 article:nth-child(1)
 {
-    margin-bottom: 75px;
+    margin-bottom: 56px;
     }
 #activites_vignette_images1
 {
     width:225%;
     left:-77%;
-}
+    }
 #activites_vignette_images2
 { 
-    width: 125%;
-    top:-111%;
+    width: 110%;
+    top:-80%;
     left: -4%; 
     }
 #activites_vignette_images3
 {
     width: 125%;
     left: -15%;
+    top:-50%;
      }
 #activites_vignette_images4
 {
     width:200%;
     left: -53%;
-}
+    }
 #activites_vignette_images5
 {
     width: 125%;
     top: -15%;
     left: -15%;
-}
+    }
 #activites_vignette_images6
 {
     width: 125%;
     top:-41%;
     left: -13%;
-}
-
+    }
 /*        footer        */
 footer
 {
     background-color: #F2F2F2;
     display: flex;
+    justify-content: space-around;
     width: 100%;
-    }
+    padding-top: 40px;
 
+    }
 footer ul
-{
-    list-style: none;
+{   list-style: none;
     padding-left: 0px;
     display: inline;
     flex-direction: column;
     }
+footer li
+{
+    line-height: 1.8;
+    }
 .foot
 {
-  
-    margin-left: 130px;
+     margin-left: 130px;
     padding-right: 350px;
-}
+    }
 footer h3
 {
     margin-bottom: 40px;
-    margin-top: 60px;
     }
 
 
-/*  mediaqueries*/
-@media all and (min-width:768px) and (max-width:992px)
-{}
-@media all and (max-width:768px)
-
-
+/*  mediaqueries-----------------------------------------------------*/                         
+@media all  and (max-width:992px)
 {
 #conteneur
-
-    
-
+{ 
+    width: 100%;
+    margin: auto;
+    }
 header
 {
     display: inherit;
     text-align: center;
-}
-header img 
-{
-    width: 35%;
-}
-header ul
+    }
+    header ul
 {
     width: 100%;
-}
-button 
-{
-    visibility:collapse;
-}
-button i 
-{
-    visibility:visible;
-}
-h2 
-{
-    font-size: 45px;
-    margin-left: 80px;
-}
-#alignement_filtres,footer
-{
-    display:inherit;
-}
-#entete_populaire
-{
-    padding-left: inherit;
-}
-#populaires_trois_vignettes
-{
-    width: 93%;
-    padding: 10px;
-}
+    }
 aside 
 {
     align-items: center;
     border-radius: inherit;
-}
-#deux_sections
+    max-width: inherit;
+    width: 100%;
+    }
+#populaires_trois_vignettes
 {
+    width: 93%;
+    
+    padding: 10px;
+    }
+.populaires_vignettes
+{
+    margin-left: 11%;
+    }
+
+#deux_sections,footer
+{ 
     display: inherit;
 }
 #hebergement,#section_activites
@@ -648,92 +588,185 @@ aside
   border-radius: inherit;
   padding: 10px;
     }
-
-#section_hebergement
+#section_hebergement 
 {
     width:100%;
     background-color: inherit;
-    padding:10px;
+    padding:0px 10px;
     }
-#hebergement article, #section_activites article
+#hebergement article,#section_activites article
 {
     height:400px;
     border-radius: 50px ;
-    width: 100%;
+    width: 96%;
     margin:  40px 0px;
     border:10px solid white;
     box-shadow: 3px 3px 14px 5px #77727254;
     box-sizing: border-box;   
     }
-#section_activites article
-{
-    width: 97%;
-}
 #section_hebergement figure
 {
     width:100%;
     height: 230px; 
     }
+#hebergement_vignette_images2
+{
+    top:-123%;
+    }
+#hebergement_vignette_images3
+{
+    top: -88%;
+    }
+#hebergement_vignette_images4
+{
+    top:-208%
+    }
+#hebergement_vignette_image5
+{
+    width: 115%;
+    top:-36%;
+    }
 #hebergement_vignette_image6
 {
-    top:-171%;
-}
-#section_activites figure 
-{
-    width:100%;
-    height:250px;
-    position: relative;
+    top:-151%;
     }
-.hebergement_description
-{ 
-    height:145px;
-    } 
-.activites_description
-{
-    height:80px;
-    }
- #section_hebergement img,#section_activites img 
+#section_hebergement img,#section_activites img 
 {
     border-top-left-radius: 43px;
     border-top-right-radius: 43px;
     position:absolute;
-    }  
-
-
+    }
 #section_activites
 {
     display: inherit;
     width: 100%;
     margin:auto;
+    padding:0px 10px;
+    max-width: 920px;
     }
-.populaires_vignettes
+#section-activites article
 {
-    width:93.5%;
-    margin: 0px;
-    margin-bottom: 60px;
-    }
-#alignement_activites
-{
-    padding:10px;
-    box-sizing: border-box;
+    width: 88%;
 }
+#activites2 article:nth-child(1) figure,
+#activites2 article:nth-child(2) figure,
+#activites4 article:nth-child(1) figure, 
+#activites4 article:nth-child(2) figure,
+#activites1 article figure
+{
+    height: 300px;
+    }
+#section_activites figure 
+{
+    width:100%;
+    height:300px;
+    position: relative;
+    }
+
 #activites_vignette_images1
 {
     width:150%;
-    top: -48%;
+    top: -59%;
     left: -5%;
     }
 #activites_vignette_images2
 {
     width: 125%;
-    top: -200%;
+    top: -156%;
     }
 #activites_vignette_images3 
 {
     width: 125%;
-    top:-30%;
+    top:-70%;
     left: -15%;
     }
+#activites_vignette_images4
+{ 
+    width: 162%;
+    top: -120%;
+    left: -50%;
+    }
+#activites_vignette_images6
+{
+    top:-63%;
+    }
+.foot
+{
+    margin-left: 35%;
+    }
+}
+@media all and (max-width:768px)/*---------------------------*/
+{                                  
+header img 
+{
+    width: 35%;
+    }
+button 
+{
+    visibility:collapse;
+    }
+button i 
+{
+    visibility:visible;
+    }
+h2 
+{
+    font-size: 45px;
+    margin-left: 80px;
+    }
+#alignement_filtres
+{
+    display:inherit;
+    }
+#entete_populaire
+{
+    padding-left: inherit;
+    }
+#alignement_activites
+{
+    padding:10px;
+    box-sizing: border-box;
+    }                         
+ #section_hebergement
+{
+    padding:10px;
+    } 
+/*changement par section*/                    
+ .populaires_vignettes  
+{
+    width:93.5%;
+    margin: 0px;
+    margin-bottom: 60px;
+    } 
+
+ #section_hebergement figure
+{
+    height: 230px; 
+    } 
+
+.hebergement_description
+{ 
+    height:145px;
+    } 
+#activites2 figure,#activites4 figure
+{
+    height: inherit;
+    }
+#section_activites figure 
+{
+    min-height:310px;
+       }
+
+#activites_vignettes_images3
+{
+    top:-40%;
+}    
+#activites_vignette_images2
+{
+    width: 125%;
+    top: -111%;
+    }
+
 #activites_vignette_images4
 { 
     width: 162%;
@@ -743,11 +776,16 @@ aside
 #activites_vignette_images6
 {
     top:-59%;
-}
+    } 
 .foot
 {  
     margin-left: 50px;
+    }
+footer 
+{
+    width: 100%;
+    }
+    
 }
-
-}
-
+    
+    
