--- a/booki.css
+++ b/booki.css
@@ -18,7 +18,7 @@ body
     margin: 0 auto;
     width: 100%;
     font-family: 'Raleway',Verdana, sans-serif;
-    font-size:20px;  
+    font-size:20px;   
     line-height: 0.9;
     box-sizing: border-box;
     } 
@@ -45,12 +45,12 @@ a
 h2
 {
     margin:10px 10px 60px;
-    font-size: 50px;  
+    font-size: 50px;   
     font-weight: bold;
     }
 h3
 {
-    font-size: 33px;  
+    font-size: 33px;   
     font-family: 'Raleway-SemiBold'serif;
     font-weight: normal;
     margin:20px 0px 0px;
@@ -86,7 +86,7 @@ header a
 {
     text-decoration: none;
     font-family: 'Raleway-Light';
-    font-size: 30px; 
+    font-size: 30px;  
     padding-top: 60px;
     }
 ul a:visited,ul a:hover
@@ -128,7 +128,7 @@ fieldset
     
 #nom_de_ville
 {
-    font-size: 40px; 
+    font-size: 40px;  
     font-weight: bold;
     padding-left: 20px;
     border:3px solid #F2F2F2;  
@@ -148,7 +148,7 @@ button
     border-bottom-right-radius: 20px 20px;
     height: 100px;
     width:270px;
-    font-size: 30px;  
+    font-size: 30px;   
     font-weight: bold;
     color: white;
     position:relative; 
@@ -198,7 +198,7 @@ button i
     text-transform: capitalize;
     padding: 20px 20px 20px 70px;
     position: relative;
-    font-size: 33px;  
+    font-size: 33px;   
     font-family: 'Raleway-SemiBold'serif;
     }
 #filtres p:hover
@@ -233,7 +233,7 @@ button i
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    box-sizing: border-box;
+    box-sizing: border-box; 
     }
 #deux_sections p
 {
@@ -298,11 +298,8 @@ button i
     }
 #entete_populaire
 {
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 85%;
-    margin-top: 100px;
+    display:inline-flex;
+    margin-top: 80px;
     padding-left: 80px;
     padding-bottom: 40px;
     }
@@ -310,6 +307,7 @@ button i
 {
     color: black;
     font-size: 40px;
+    padding-left:240px;
     }
 
 aside
