--- a/essai1600px.css
+++ b/essai1600px.css
@@ -24,7 +24,7 @@ body
     } 
  header,main
 {
-    width: 94%;
+    width: 96%;
     margin:0 auto;
     max-width: 2600px;
     }
@@ -57,8 +57,8 @@ h3
 
 span
 {  
-    font-size: 17px;
-    font-weight:800;
+    font-family:'Raleway-SemiBold',serif;
+    font-weight: bold;
         } 
 /* header ------------------*/
 header
@@ -250,14 +250,12 @@ button i
 aside
 {
     display:flex;
-    width:31%;
+    width:30%;
     flex-wrap: wrap;
     background-color: #F2F2F2;
     border-radius: 50px 50px;
-    padding: 1.7%;
-    margin: 0 auto;
+    padding: 1.8%;
     max-width:870px ;
-    min-width:280px ;
     }
 #populaires_trois_vignettes
 {
@@ -269,8 +267,9 @@ aside
     justify-content: space-between;
     border: 8px solid white;
     border-radius: 40px ;
+    width: 400px;
     max-width: 700px; 
-    min-width:280px;
+    min-width:380px;
     height:180px; 
     margin:50px auto;
     box-shadow: 3px 3px 14px 5px #77727254;
@@ -303,8 +302,8 @@ aside
     object-fit: cover;
     overflow: hidden;
     height:230px;
-    border-top-left-radius: 23px;
-    border-bottom-left-radius: 23px;
+    border-top-left-radius: 35px;
+    border-bottom-left-radius: 35px;
     width: 106%;
     top:-10%; 
     }
@@ -360,7 +359,7 @@ aside
 /*finitions*/
 .hebergement_description
 {
-    padding-left: 10px;
+    padding-left: 23px;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius:20px ;
     }
@@ -393,13 +392,12 @@ aside
   /* section activites-------------------*/
 #alignement_activites
 {
-    margin: 50px auto;
-    padding:1%;
+    margin: 60px 0;
 }
 #section_activites
 {
     display:flex;
-    margin-bottom:60px;
+    margin-bottom:130px;
     flex-wrap: wrap;
     justify-content: space-between;
     }
@@ -543,12 +541,12 @@ footer h3
     }
 h2 
 {
-    font-size: 26px;
+    font-size: 1.8em;
     font-weight: 900;
 }
 h3 
 {
-    font-size: 19px;
+    font-size: 1.3em;
 }
 header
 {
@@ -640,8 +638,8 @@ aside
 #hebergement article,#section_activites article
 {
     height:350px;
-    border-radius: 23px ;
-    min-width: 350px;
+    border-radius: 32px ;
+    min-width: 370px;
     margin:  40px auto;
     border:10px solid white;
     box-shadow: 3px 3px 14px 5px #77727254;
@@ -669,6 +667,10 @@ aside
     width: 100%;
     margin: 10px auto;
 }
+#alignement_activites h2 
+{
+    margin-left: 80px;
+}
 #activites2 article:nth-child(1) figure,
 #activites2 article:nth-child(2) figure,
 #activites4 article:nth-child(1) figure, 
@@ -690,9 +692,9 @@ aside
     width: 165%;
 }
 
-footer
+#footer
 {
-    display:inherit;
+    display: inherit;
 }
 .foot
 {
@@ -740,7 +742,8 @@ aside h2
 #hebergement article,#section_activites article
 {
     height:400px;
-    min-width: 500px;
+    border-radius: 50px ;
+    min-width: 575px;
     margin:  40px auto;
     border:10px solid white;
     box-shadow: 3px 3px 14px 5px #77727254;
@@ -768,26 +771,44 @@ aside h2
     margin-bottom: 60px;
     } 
 
- #section_hebergement figure,#activites2 figure,#activites4 figure
+ #section_hebergement figure
 {
     height: 230px; 
     } 
-#section_hebergement figure img 
+
+.hebergement_description
+{ 
+    height:145px;
+    } 
+#activites2 figure,#activites4 figure
 {
-    width: 103%;
-}
-#section_activites article
+    height: inherit;
+    }
+#section_activites figure 
 {
-    border:none;
-}
-.activites1,#activites2,#activites4
+    min-height:310px;
+       }
+
+#activites_vignettes_images3
 {
-    width: 80%;
-}
-.activites1 img,#activites2 img,#activites4 img 
+    top:-40%;
+}    
+#activites_vignette_images2
 {
-    width: 120%;
-}
+    width: 125%;
+    top: -140%;
+    }
+
+#activites_vignette_images4
+{ 
+    width: 162%;
+    top: -91%;
+    left: -62%;
+    }
+#activites_vignette_images6
+{
+    top:-59%;
+    } 
 .foot
 {  
     margin-left: 50px;
